hphp/hack/test/typecheck/disallow_return_by_ref/method.php
<?hh

class C {
  public function &test(): mixed {
    static $x;
    return $x;
  }
}
